kubernetes/watermark-webapp/00-middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: redirect-www-to-root
spec:
  redirectRegex:
    regex: ^https?://www\.onlinewatermarks\.com/(.*)
    replacement: https://onlinewatermarks.com/$1
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: hsts-header
spec:
  headers:
    customResponseHeaders:
      Strict-Transport-Security: "max-age=31536000; includeSubDomains; preload"
