kubernetes/watermark-webapp/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: watermark-webapp

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 3000
  selector:
    app: watermark-webapp
